# adk_turorial

./: README.md
backend/: .env  .gitignore  pyproject.toml  test_agents.py
backend/app/: main.py
backend/app/adk/: models.py  routes.py
backend/app/agents/: analyzer.py  manager.py  responder.py  supervisor.py
backend/app/models/: database.py
backend/app/routers/: auth.py  emails.py  websocket.py
backend/app/schemas/: email.py
backend/app/services/: database_service.py  email_cache_service.py  filtering_service.py  gmail_service.py  learning_service.py  shared_gmail.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AuthButton.tsx  EmailDetail.tsx  EmailList.tsx
frontend/src/components/adk/: ADKIntroduction.tsx  ADKTutorial.tsx  CodeExamples.tsx  DeviceSimulator.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: email.ts
python_tutorial/: README.md  TEST_PLAN.md  requirements.txt  setup.py
python_tutorial/src/: adk_tutorial.py
python_tutorial/src/google_adk/: README.md  __init__.py  adk_tutorial.py  explore_genai.py  main_tutorial.py  mcp.py
python_tutorial/src/google_adk.egg-info/: PKG-INFO  SOURCES.txt
python_tutorial/src/google_adk/examples/: __init__.py  basic_agent.py  context_agent.py  mcp_agent.py  open_source_mcp_agent.py  tool_agent.py
